Pequenas modificações no header
Pequenas modificações no header e media queries

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Am Tech Solutions | DevMan</title>
     <link rel="stylesheet" href="estilos/style.css">
+    <link rel="stylesheet" href="estilos/media-queries.css">
 </head>
 
 <body>
@@ -94,7 +95,7 @@
             </p>
 
             <ul>
-                <li><a href="$">Quero um Orçamento Agora!</a></li>
+                <li><a href="#">Quero um Orçamento Agora!</a></li>
             </ul>
         </aside>
     </main>
