Construção das sessões do site
Construção das sessões do site

--- a/index.html
+++ b/index.html
@@ -22,40 +22,52 @@
         </menu>
     </header>
     <main>
-        <h2>Tecnologia com performance, segurança e confiança!</h2>
+        <section id="tecn">
+            <h2>Tecnologia com performance, segurança e confiança!</h2>
 
-        <section>
+            <picture>
+                <source media="(min-width: )" srcset="#">
+                <img src="#" alt="#" srcset="#">
+            </picture>
             <p>Na era digital, um computador funcionando bem não é luxo, é necessidade. Seja para estudar, trabalhar,
                 jogar
                 ou empreender, sua máquina precisa estar pronta para te acompanhar. É aí que nós entramos: oferecemos
                 serviços especializados para que você não perca tempo com lentidão, falhas ou problemas técnicos.</p>
         </section>
+
+        <article id="tech-image">
+
+        </article>
+
         <section id="service">
             <h3>Nossos Serviços</h3>
-            <article class="Manut">
+            <article class="Manut" id="box">
                 <h4>Manutenção Preventiva e Corretiva</h4>
                 <p>Cuidamos do seu computador antes que ele apresente falhas
                     graves.</p>
             </article>
-            <article class="Format">
+            <article class="Format" id="box">
                 <h4>Formatação + Backup Inteligente</h4>
                 <p>Sistema renovado, limpo e atualizado, sem riscos de perder seus
                     arquivos.</p>
             </article>
-            <article class="Mont">
+            <article class="Mont" id="box">
                 <h4>Montagem de Máquinas Personalizadas</h4>
                 <p>PCs sob medida para gamers, designers, empresas ou uso
                     doméstico.</p>
             </article>
-            <article class="Limp">
+            <article class="Limp" id="box">
                 <h4>Limpeza Física e Otimização de Desempenho</h4>
                 <p>Remoção de poeira, troca de pasta térmica, resfriamento
                     e ajustes internos para máxima performance.</p>
             </article>
             <p>Trabalhamos com todas as marcas e modelos, sempre prezando pela qualidade e segurança.</p>
         </section>
+        <article id="tech-image">
+
+        </article>
         <section id="obj">
-            <h3>Por que Escolher a [Nome da Startup]?</h3>
+            <h3>Por que Escolher a AmTech?</h3>
             <ul>
                 <li>Rapidez no atendimento</li>
                 <li>Segurança digital garantida</li>
@@ -66,6 +78,9 @@
             <p>Nosso objetivo não é apenas consertar computadores. É devolver tranquilidade e confiança para que você se
                 concentre no que realmente importa.</p>
         </section>
+        <article id="tech-image">
+
+        </article>
         <section id="mot">
             <h3>Para Quem Atendemos?
             </h3>
@@ -77,20 +92,27 @@
                 <li>Pessoas que querem prolongar a vida útil dos seus equipamentos.</li>
             </ul>
         </section>
+        <article id="tech-image">
+
+        </article>
         <section id="dif">
-            <h3>Diferencial da [Nome da Startup]
+            <h3>Diferencial da AmTech
             </h3>
             <p>Não somos apenas uma assistência técnica.
                 Somos uma startup tecnológica, sempre conectada às últimas tendências em hardware, software e segurança
                 digital. Isso significa que você recebe não só um serviço, mas também consultoria e dicas exclusivas
                 para manter seu computador sempre atualizado.</p>
         </section>
+        <article id="tech-image">
+
+        </article>
         <aside id="cont">
             <h2>Entre em Contato Agora!</h2>
             <p>Seu computador está lento? Apresenta problemas? Precisa de uma limpeza ou até de uma máquina nova?</p>
-            <h3>Nós temos a solução.</h3>
+
         </aside>
         <aside id="contact">
+            <h3>Nós temos a solução.</h3>
             <p>Fale agora com nossa equipe pelo WhatsApp ou formulário de contato e peça um orçamento sem compromisso.
             </p>
 
