Imagem de fundo
Imagem de fundo

--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
         <section id="tecn">
             <h2>Tecnologia com performance, segurança e confiança!</h2>
 
-            <picture>
-                <source media="(min-width: )" srcset="#">
-                <img src="#" alt="#" srcset="#">
+            <picture id="foto-pc">
+                <source media="(min-width: 600px)" srcset="" type="image.png">
+                <img src="./Images/tech_comp01-356x237.png" alt="#" srcset="" type="image.png">
             </picture>
             <p>Na era digital, um computador funcionando bem não é luxo, é necessidade. Seja para estudar, trabalhar,
                 jogar
@@ -79,7 +79,8 @@
                 concentre no que realmente importa.</p>
         </section>
         <article id="tech-image">
-
+            <div class="box1"></div>
+            <div class="box2"></div>
         </article>
         <section id="mot">
             <h3>Para Quem Atendemos?
